fix spacing on small screens

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -326,6 +326,10 @@
 		--flow-space: var(--space-s-m);
 	}
 
+	.callout-container {
+		container: callout / inline-size;
+	}
+
 	.callout {
 		outline: 3px solid var(--color-primary);
 		border-radius: 5px;
@@ -337,7 +341,7 @@
 	.callout:has(svg) {
 		display: grid;
 		gap: 1.5lh;
-		grid-template-columns: 1ch 1fr;
+		grid-template-columns: 2ch 1fr;
 		align-items: center;
 	}
 
@@ -355,5 +359,31 @@
 		transform: scale(3.5);
 		filter: brightness(1.5) drop-shadow(0.5px 1.7px 0px var(--color-primary))
 			saturate(95%);
+	}
+
+	@container callout (width < 450px) {
+		.callout {
+			padding: var(--space-xs);
+		}
+
+		.callout:has(svg) {
+			gap: 1lh;
+		}
+
+		.callout p {
+			grid-column: 1 / -1;
+			padding-inline-start: var(--space-xs);
+		}
+
+		.callout p:first-of-type {
+			font-size: var(--step-0);
+			font-weight: bold;
+			grid-column: 2;
+		}
+
+		.callout svg {
+			align-self: initial;
+			transform: scale(2);
+		}
 	}
 }
